# iceberg-mcp-data

./: README.md  databricks.yml  pyproject.toml  sonar-project.properties
.github/workflows/: deliver.yml  integrate.yml  pipeline.yml
resources/: iceberg-mcp-data.pipeline.yml
src/iceberg_mcp_data/: README.md  config.py  pipeline.py
src/iceberg_mcp_data/explorations/: sample_exploration.ipynb
src/iceberg_mcp_data/extractions/: ingest_pypi_data.py
src/iceberg_mcp_data/ingestions/: distribution_metadata.py  distributon_metadata.py  file_downloads.py  ingest_pypi_data.py
src/iceberg_mcp_data/jobs/: __init__.py  download_counts.py
src/iceberg_mcp_data/notebooks/: downloads_eda.ipynb
src/iceberg_mcp_data/transformations/: __init__.py  download_counts.py  real_downloads.py  releases_per_month.py
test/transfomations/: test_download_counts.py
tests/: spark_test_case.py
tests/transfomations/: test_download_counts.py
tests/transformations/: test_download_counts.py  test_real_downloads.py
