[project]
name = "iceberg-mcp-data"
version = "0.1.0"
description = "Data Pipeline for Iceberg MCP Server"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.12"
dependencies = [
    "cyclopts",
    "pyspark<4.0.0",
    "snowpark-connect[iceberg]",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.scripts]
pipeline = "iceberg_mcp_data.pipeline:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "PL",  # pylint
    "I",   # isort
    "C90", # mccabe
]