[project]
name = "iceberg-mcp-data"
version = "0.1.0"
description = "Data Pipeline for Iceberg MCP Server"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.12"
dependencies = [
    "cyclopts",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "pyspark<4.0.0",
    "snowflake-telemetry-python",
    "snowpark-connect[iceberg]",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.scripts]
pipeline = "iceberg_mcp_data.pipeline:pipeline"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "PL",  # pylint
    "I",   # isort
    "C90", # mccabe
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
